bind_preference_grammar/BindPreferenceGrammarParser.py
# Generated from BindPreferenceGrammar.g4 by ANTLR 4.5.1
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO



class BindPreferenceGrammarParser ( Parser ):

    grammarFileName = "BindPreferenceGrammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"'local'", u"'of'", u"'type'", u"'in'", 
                     u"':'", u"'used'", u"'by'", u"'('", u"')'", u"'['", 
                     u"']'", u"<INVALID>", u"'and'", u"'or'", u"'not'", 
                     u"'true'", u"'false'", u"'impl'", u"'iff'", u"'exists'", 
                     u"'forall'", u"'sum'", u"'cost'", u"'<='", u"'='", 
                     u"'>='", u"'<'", u"'>'", u"'!='", u"'+'", u"'-'", u"'*'", 
                     u"'abs'", u"'obj'", u"'DC'" ]

    symbolicNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"RE", u"AND", u"OR", u"NOT", u"TRUE", u"FALSE", u"IMPL", 
                      u"IFF", u"EXISTS", u"FORALL", u"SUM", u"COST", u"LEQ", 
                      u"EQ", u"GEQ", u"LT", u"GT", u"NEQ", u"PLUS", u"MINUS", 
                      u"TIMES", u"ABS", u"OBJ", u"DC", u"VARIABLE", u"ID", 
                      u"INT", u"WS" ]

    RULE_statement = 0
    RULE_preference = 1
    RULE_b_expr = 2
    RULE_b_term = 3
    RULE_b_factor = 4
    RULE_relation = 5
    RULE_expr = 6
    RULE_term = 7
    RULE_objId = 8
    RULE_typeV = 9
    RULE_bool_binary_op = 10
    RULE_arith_binary_op = 11
    RULE_arith_unary_op = 12
    RULE_comparison_op = 13
    RULE_unaryOp = 14
    RULE_boolFact = 15
    RULE_variable = 16
    RULE_re = 17

    ruleNames =  [ u"statement", u"preference", u"b_expr", u"b_term", u"b_factor", 
                   u"relation", u"expr", u"term", u"objId", u"typeV", u"bool_binary_op", 
                   u"arith_binary_op", u"arith_unary_op", u"comparison_op", 
                   u"unaryOp", u"boolFact", u"variable", u"re" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    RE=12
    AND=13
    OR=14
    NOT=15
    TRUE=16
    FALSE=17
    IMPL=18
    IFF=19
    EXISTS=20
    FORALL=21
    SUM=22
    COST=23
    LEQ=24
    EQ=25
    GEQ=26
    LT=27
    GT=28
    NEQ=29
    PLUS=30
    MINUS=31
    TIMES=32
    ABS=33
    OBJ=34
    DC=35
    VARIABLE=36
    ID=37
    INT=38
    WS=39

    def __init__(self, input):
        super(BindPreferenceGrammarParser, self).__init__(input)
        self.checkVersion("4.5.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(BindPreferenceGrammarParser.StatementContext, self).__init__(parent, invokingState)
            self.parser = parser

        def preference(self):
            return self.getTypedRuleContext(BindPreferenceGrammarParser.PreferenceContext,0)


        def EOF(self):
            return self.getToken(BindPreferenceGrammarParser.EOF, 0)

        def getRuleIndex(self):
            return BindPreferenceGrammarParser.RULE_statement

        def accept(self, visitor):
            if hasattr(visitor, "visitStatement"):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = BindPreferenceGrammarParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self.preference()
            self.state = 37
            self.match(BindPreferenceGrammarParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PreferenceContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(BindPreferenceGrammarParser.PreferenceContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return BindPreferenceGrammarParser.RULE_preference

     
        def copyFrom(self, ctx):
            super(BindPreferenceGrammarParser.PreferenceContext, self).copyFrom(ctx)



    class ApreferenceExprContext(PreferenceContext):

        def __init__(self, parser, ctx): # actually a BindPreferenceGrammarParser.PreferenceContext)
            super(BindPreferenceGrammarParser.ApreferenceExprContext, self).__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(BindPreferenceGrammarParser.ExprContext,0)


        def accept(self, visitor):
            if hasattr(visitor, "visitApreferenceExpr"):
                return visitor.visitApreferenceExpr(self)
            else:
                return visitor.visitChildren(self)


    class ApreferenceLocalContext(PreferenceContext):

        def __init__(self, parser, ctx): # actually a BindPreferenceGrammarParser.PreferenceContext)
            super(BindPreferenceGrammarParser.ApreferenceLocalContext, self).__init__(parser)
            self.copyFrom(ctx)


        def accept(self, visitor):
            if hasattr(visitor, "visitApreferenceLocal"):
                return visitor.visitApreferenceLocal(self)
            else:
                return visitor.visitChildren(self)



    def preference(self):

        localctx = BindPreferenceGrammarParser.PreferenceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_preference)
        try:
            self.state = 41
            token = self._input.LA(1)
            if token in [BindPreferenceGrammarParser.T__0]:
                localctx = BindPreferenceGrammarParser.ApreferenceLocalContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 39
                self.match(BindPreferenceGrammarParser.T__0)

            elif token in [BindPreferenceGrammarParser.T__7, BindPreferenceGrammarParser.EXISTS, BindPreferenceGrammarParser.FORALL, BindPreferenceGrammarParser.SUM, BindPreferenceGrammarParser.ABS, BindPreferenceGrammarParser.VARIABLE, BindPreferenceGrammarParser.INT]:
                localctx = BindPreferenceGrammarParser.ApreferenceExprContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 40
                self.expr()

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class B_exprContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(BindPreferenceGrammarParser.B_exprContext, self).__init__(parent, invokingState)
            self.parser = parser

        def b_term(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(BindPreferenceGrammarParser.B_termContext)
            else:
                return self.getTypedRuleContext(BindPreferenceGrammarParser.B_termContext,i)


        def bool_binary_op(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(BindPreferenceGrammarParser.Bool_binary_opContext)
            else:
                return self.getTypedRuleContext(BindPreferenceGrammarParser.Bool_binary_opContext,i)


        def getRuleIndex(self):
            return BindPreferenceGrammarParser.RULE_b_expr

        def accept(self, visitor):
            if hasattr(visitor, "visitB_expr"):
                return visitor.visitB_expr(self)
            else:
                return visitor.visitChildren(self)




    def b_expr(self):

        localctx = BindPreferenceGrammarParser.B_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_b_expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self.b_term()
            self.state = 49
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 44
                    self.bool_binary_op()
                    self.state = 45
                    self.b_term() 
                self.state = 51
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class B_termContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(BindPreferenceGrammarParser.B_termContext, self).__init__(parent, invokingState)
            self.parser = parser

        def b_factor(self):
            return self.getTypedRuleContext(BindPreferenceGrammarParser.B_factorContext,0)


        def unaryOp(self):
            return self.getTypedRuleContext(BindPreferenceGrammarParser.UnaryOpContext,0)


        def getRuleIndex(self):
            return BindPreferenceGrammarParser.RULE_b_term

        def accept(self, visitor):
            if hasattr(visitor, "visitB_term"):
                return visitor.visitB_term(self)
            else:
                return visitor.visitChildren(self)




    def b_term(self):

        localctx = BindPreferenceGrammarParser.B_termContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_b_term)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            _la = self._input.LA(1)
            if _la==BindPreferenceGrammarParser.NOT:
                self.state = 52
                self.unaryOp()


            self.state = 55
            self.b_factor()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class B_factorContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(BindPreferenceGrammarParser.B_factorContext, self).__init__(parent, invokingState)
            self.parser = parser

        def boolFact(self):
            return self.getTypedRuleContext(BindPreferenceGrammarParser.BoolFactContext,0)


        def relation(self):
            return self.getTypedRuleContext(BindPreferenceGrammarParser.RelationContext,0)


        def getRuleIndex(self):
            return BindPreferenceGrammarParser.RULE_b_factor

        def accept(self, visitor):
            if hasattr(visitor, "visitB_factor"):
                return visitor.visitB_factor(self)
            else:
                return visitor.visitChildren(self)




    def b_factor(self):

        localctx = BindPreferenceGrammarParser.B_factorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_b_factor)
        try:
            self.state = 59
            token = self._input.LA(1)
            if token in [BindPreferenceGrammarParser.TRUE, BindPreferenceGrammarParser.FALSE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 57
                self.boolFact()

            elif token in [BindPreferenceGrammarParser.T__7, BindPreferenceGrammarParser.EXISTS, BindPreferenceGrammarParser.FORALL, BindPreferenceGrammarParser.SUM, BindPreferenceGrammarParser.ABS, BindPreferenceGrammarParser.VARIABLE, BindPreferenceGrammarParser.INT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 58
                self.relation()

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RelationContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(BindPreferenceGrammarParser.RelationContext, self).__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(BindPreferenceGrammarParser.ExprContext)
            else:
                return self.getTypedRuleContext(BindPreferenceGrammarParser.ExprContext,i)


        def comparison_op(self):
            return self.getTypedRuleContext(BindPreferenceGrammarParser.Comparison_opContext,0)


        def getRuleIndex(self):
            return BindPreferenceGrammarParser.RULE_relation

        def accept(self, visitor):
            if hasattr(visitor, "visitRelation"):
                return visitor.visitRelation(self)
            else:
                return visitor.visitChildren(self)




    def relation(self):

        localctx = BindPreferenceGrammarParser.RelationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_relation)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.expr()
            self.state = 65
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 62
                self.comparison_op()
                self.state = 63
                self.expr()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(BindPreferenceGrammarParser.ExprContext, self).__init__(parent, invokingState)
            self.parser = parser

        def term(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(BindPreferenceGrammarParser.TermContext)
            else:
                return self.getTypedRuleContext(BindPreferenceGrammarParser.TermContext,i)


        def arith_binary_op(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(BindPreferenceGrammarParser.Arith_binary_opContext)
            else:
                return self.getTypedRuleContext(BindPreferenceGrammarParser.Arith_binary_opContext,i)


        def getRuleIndex(self):
            return BindPreferenceGrammarParser.RULE_expr

        def accept(self, visitor):
            if hasattr(visitor, "visitExpr"):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)




    def expr(self):

        localctx = BindPreferenceGrammarParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.term()
            self.state = 73
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 68
                    self.arith_binary_op()
                    self.state = 69
                    self.term() 
                self.state = 75
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TermContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(BindPreferenceGrammarParser.TermContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return BindPreferenceGrammarParser.RULE_term

     
        def copyFrom(self, ctx):
            super(BindPreferenceGrammarParser.TermContext, self).copyFrom(ctx)



    class AexprQuantifierContext(TermContext):

        def __init__(self, parser, ctx): # actually a BindPreferenceGrammarParser.TermContext)
            super(BindPreferenceGrammarParser.AexprQuantifierContext, self).__init__(parser)
            self.copyFrom(ctx)

        def variable(self):
            return self.getTypedRuleContext(BindPreferenceGrammarParser.VariableContext,0)

        def typeV(self):
            return self.getTypedRuleContext(BindPreferenceGrammarParser.TypeVContext,0)

        def b_expr(self):
            return self.getTypedRuleContext(BindPreferenceGrammarParser.B_exprContext,0)

        def EXISTS(self):
            return self.getToken(BindPreferenceGrammarParser.EXISTS, 0)
        def FORALL(self):
            return self.getToken(BindPreferenceGrammarParser.FORALL, 0)
        def objId(self):
            return self.getTypedRuleContext(BindPreferenceGrammarParser.ObjIdContext,0)


        def accept(self, visitor):
            if hasattr(visitor, "visitAexprQuantifier"):
                return visitor.visitAexprQuantifier(self)
            else:
                return visitor.visitChildren(self)


    class AexprSumContext(TermContext):

        def __init__(self, parser, ctx): # actually a BindPreferenceGrammarParser.TermContext)
            super(BindPreferenceGrammarParser.AexprSumContext, self).__init__(parser)
            self.copyFrom(ctx)

        def SUM(self):
            return self.getToken(BindPreferenceGrammarParser.SUM, 0)
        def variable(self):
            return self.getTypedRuleContext(BindPreferenceGrammarParser.VariableContext,0)

        def typeV(self):
            return self.getTypedRuleContext(BindPreferenceGrammarParser.TypeVContext,0)

        def expr(self):
            return self.getTypedRuleContext(BindPreferenceGrammarParser.ExprContext,0)

        def objId(self):
            return self.getTypedRuleContext(BindPreferenceGrammarParser.ObjIdContext,0)


        def accept(self, visitor):
            if hasattr(visitor, "visitAexprSum"):
                return visitor.visitAexprSum(self)
            else:
                return visitor.visitChildren(self)


    class AexprBindContext(TermContext):

        def __init__(self, parser, ctx): # actually a BindPreferenceGrammarParser.TermContext)
            super(BindPreferenceGrammarParser.AexprBindContext, self).__init__(parser)
            self.copyFrom(ctx)

        def variable(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(BindPreferenceGrammarParser.VariableContext)
            else:
                return self.getTypedRuleContext(BindPreferenceGrammarParser.VariableContext,i)


        def accept(self, visitor):
            if hasattr(visitor, "visitAexprBind"):
                return visitor.visitAexprBind(self)
            else:
                return visitor.visitChildren(self)


    class AexprBracketsContext(TermContext):

        def __init__(self, parser, ctx): # actually a BindPreferenceGrammarParser.TermContext)
            super(BindPreferenceGrammarParser.AexprBracketsContext, self).__init__(parser)
            self.copyFrom(ctx)

        def b_expr(self):
            return self.getTypedRuleContext(BindPreferenceGrammarParser.B_exprContext,0)


        def accept(self, visitor):
            if hasattr(visitor, "visitAexprBrackets"):
                return visitor.visitAexprBrackets(self)
            else:
                return visitor.visitChildren(self)


    class AexprUnaryArithmeticContext(TermContext):

        def __init__(self, parser, ctx): # actually a BindPreferenceGrammarParser.TermContext)
            super(BindPreferenceGrammarParser.AexprUnaryArithmeticContext, self).__init__(parser)
            self.copyFrom(ctx)

        def arith_unary_op(self):
            return self.getTypedRuleContext(BindPreferenceGrammarParser.Arith_unary_opContext,0)

        def expr(self):
            return self.getTypedRuleContext(BindPreferenceGrammarParser.ExprContext,0)


        def accept(self, visitor):
            if hasattr(visitor, "visitAexprUnaryArithmetic"):
                return visitor.visitAexprUnaryArithmetic(self)
            else:
                return visitor.visitChildren(self)


    class AexprIntContext(TermContext):

        def __init__(self, parser, ctx): # actually a BindPreferenceGrammarParser.TermContext)
            super(BindPreferenceGrammarParser.AexprIntContext, self).__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(BindPreferenceGrammarParser.INT, 0)

        def accept(self, visitor):
            if hasattr(visitor, "visitAexprInt"):
                return visitor.visitAexprInt(self)
            else:
                return visitor.visitChildren(self)



    def term(self):

        localctx = BindPreferenceGrammarParser.TermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_term)
        self._la = 0 # Token type
        try:
            self.state = 113
            token = self._input.LA(1)
            if token in [BindPreferenceGrammarParser.EXISTS, BindPreferenceGrammarParser.FORALL]:
                localctx = BindPreferenceGrammarParser.AexprQuantifierContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 76
                _la = self._input.LA(1)
                if not(_la==BindPreferenceGrammarParser.EXISTS or _la==BindPreferenceGrammarParser.FORALL):
                    self._errHandler.recoverInline(self)
                else:
                    self.consume()
                self.state = 77
                self.variable()
                self.state = 81
                _la = self._input.LA(1)
                if _la==BindPreferenceGrammarParser.T__1:
                    self.state = 78
                    self.match(BindPreferenceGrammarParser.T__1)
                    self.state = 79
                    self.match(BindPreferenceGrammarParser.T__2)
                    self.state = 80
                    self.objId()


                self.state = 83
                self.match(BindPreferenceGrammarParser.T__3)
                self.state = 84
                self.typeV()
                self.state = 85
                self.match(BindPreferenceGrammarParser.T__4)
                self.state = 86
                self.b_expr()

            elif token in [BindPreferenceGrammarParser.INT]:
                localctx = BindPreferenceGrammarParser.AexprIntContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 88
                self.match(BindPreferenceGrammarParser.INT)

            elif token in [BindPreferenceGrammarParser.VARIABLE]:
                localctx = BindPreferenceGrammarParser.AexprBindContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 89
                self.variable()
                self.state = 90
                self.match(BindPreferenceGrammarParser.T__5)
                self.state = 91
                self.match(BindPreferenceGrammarParser.T__6)
                self.state = 92
                self.variable()

            elif token in [BindPreferenceGrammarParser.SUM]:
                localctx = BindPreferenceGrammarParser.AexprSumContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 94
                self.match(BindPreferenceGrammarParser.SUM)
                self.state = 95
                self.variable()
                self.state = 99
                _la = self._input.LA(1)
                if _la==BindPreferenceGrammarParser.T__1:
                    self.state = 96
                    self.match(BindPreferenceGrammarParser.T__1)
                    self.state = 97
                    self.match(BindPreferenceGrammarParser.T__2)
                    self.state = 98
                    self.objId()


                self.state = 101
                self.match(BindPreferenceGrammarParser.T__3)
                self.state = 102
                self.typeV()
                self.state = 103
                self.match(BindPreferenceGrammarParser.T__4)
                self.state = 104
                self.expr()

            elif token in [BindPreferenceGrammarParser.ABS]:
                localctx = BindPreferenceGrammarParser.AexprUnaryArithmeticContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 106
                self.arith_unary_op()
                self.state = 107
                self.expr()

            elif token in [BindPreferenceGrammarParser.T__7]:
                localctx = BindPreferenceGrammarParser.AexprBracketsContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 109
                self.match(BindPreferenceGrammarParser.T__7)
                self.state = 110
                self.b_expr()
                self.state = 111
                self.match(BindPreferenceGrammarParser.T__8)

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ObjIdContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(BindPreferenceGrammarParser.ObjIdContext, self).__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return BindPreferenceGrammarParser.RULE_objId

     
        def copyFrom(self, ctx):
            super(BindPreferenceGrammarParser.ObjIdContext, self).copyFrom(ctx)



    class AobjIDScenarioContext(ObjIdContext):

        def __init__(self, parser, ctx): # actually a BindPreferenceGrammarParser.ObjIdContext)
            super(BindPreferenceGrammarParser.AobjIDScenarioContext, self).__init__(parser)
            self.copyFrom(ctx)

        def ID(self, i=None):
            if i is None:
                return self.getTokens(BindPreferenceGrammarParser.ID)
            else:
                return self.getToken(BindPreferenceGrammarParser.ID, i)

        def accept(self, visitor):
            if hasattr(visitor, "visitAobjIDScenario"):
                return visitor.visitAobjIDScenario(self)
            else:
                return visitor.visitChildren(self)


    class AobjIDREContext(ObjIdContext):

        def __init__(self, parser, ctx): # actually a BindPreferenceGrammarParser.ObjIdContext)
            super(BindPreferenceGrammarParser.AobjIDREContext, self).__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(BindPreferenceGrammarParser.ID, 0)
        def re(self):
            return self.getTypedRuleContext(BindPreferenceGrammarParser.ReContext,0)


        def accept(self, visitor):
            if hasattr(visitor, "visitAobjIDRE"):
                return visitor.visitAobjIDRE(self)
            else:
                return visitor.visitChildren(self)


    class AobjIDVarContext(ObjIdContext):

        def __init__(self, parser, ctx): # actually a BindPreferenceGrammarParser.ObjIdContext)
            super(BindPreferenceGrammarParser.AobjIDVarContext, self).__init__(parser)
            self.copyFrom(ctx)

        def variable(self):
            return self.getTypedRuleContext(BindPreferenceGrammarParser.VariableContext,0)


        def accept(self, visitor):
            if hasattr(visitor, "visitAobjIDVar"):
                return visitor.visitAobjIDVar(self)
            else:
                return visitor.visitChildren(self)


    class AobjIDIDContext(ObjIdContext):

        def __init__(self, parser, ctx): # actually a BindPreferenceGrammarParser.ObjIdContext)
            super(BindPreferenceGrammarParser.AobjIDIDContext, self).__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(BindPreferenceGrammarParser.ID, 0)

        def accept(self, visitor):
            if hasattr(visitor, "visitAobjIDID"):
                return visitor.visitAobjIDID(self)
            else:
                return visitor.visitChildren(self)



    def objId(self):

        localctx = BindPreferenceGrammarParser.ObjIdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_objId)
        try:
            self.state = 126
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                localctx = BindPreferenceGrammarParser.AobjIDIDContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 115
                self.match(BindPreferenceGrammarParser.ID)
                pass

            elif la_ == 2:
                localctx = BindPreferenceGrammarParser.AobjIDVarContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 116
                self.variable()
                pass

            elif la_ == 3:
                localctx = BindPreferenceGrammarParser.AobjIDScenarioContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 117
                self.match(BindPreferenceGrammarParser.ID)
                self.state = 118
                self.match(BindPreferenceGrammarParser.T__9)
                self.state = 119
                self.match(BindPreferenceGrammarParser.ID)
                self.state = 120
                self.match(BindPreferenceGrammarParser.T__10)
                pass

            elif la_ == 4:
                localctx = BindPreferenceGrammarParser.AobjIDREContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 121
                self.match(BindPreferenceGrammarParser.ID)
                self.state = 122
                self.match(BindPreferenceGrammarParser.T__9)
                self.state = 123
                self.re()
                self.state = 124
                self.match(BindPreferenceGrammarParser.T__10)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TypeVContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(BindPreferenceGrammarParser.TypeVContext, self).__init__(parent, invokingState)
            self.parser = parser

        def DC(self):
            return self.getToken(BindPreferenceGrammarParser.DC, 0)

        def re(self):
            return self.getTypedRuleContext(BindPreferenceGrammarParser.ReContext,0)


        def getRuleIndex(self):
            return BindPreferenceGrammarParser.RULE_typeV

        def accept(self, visitor):
            if hasattr(visitor, "visitTypeV"):
                return visitor.visitTypeV(self)
            else:
                return visitor.visitChildren(self)




    def typeV(self):

        localctx = BindPreferenceGrammarParser.TypeVContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_typeV)
        try:
            self.state = 130
            token = self._input.LA(1)
            if token in [BindPreferenceGrammarParser.DC]:
                self.enterOuterAlt(localctx, 1)
                self.state = 128
                self.match(BindPreferenceGrammarParser.DC)

            elif token in [BindPreferenceGrammarParser.RE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 129
                self.re()

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Bool_binary_opContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(BindPreferenceGrammarParser.Bool_binary_opContext, self).__init__(parent, invokingState)
            self.parser = parser

        def AND(self):
            return self.getToken(BindPreferenceGrammarParser.AND, 0)

        def OR(self):
            return self.getToken(BindPreferenceGrammarParser.OR, 0)

        def IMPL(self):
            return self.getToken(BindPreferenceGrammarParser.IMPL, 0)

        def IFF(self):
            return self.getToken(BindPreferenceGrammarParser.IFF, 0)

        def getRuleIndex(self):
            return BindPreferenceGrammarParser.RULE_bool_binary_op

        def accept(self, visitor):
            if hasattr(visitor, "visitBool_binary_op"):
                return visitor.visitBool_binary_op(self)
            else:
                return visitor.visitChildren(self)




    def bool_binary_op(self):
